crates/pina_cli/tests/snapshots/fixtures__doc_comments.snap
---
source: crates/pina_cli/tests/fixtures.rs
expression: idl
---
{
  "kind": "rootNode",
  "standard": "codama",
  "version": "1.8.0",
  "program": {
    "kind": "programNode",
    "name": "docComments",
    "publicKey": "GJQcuWrT2f3f4KNuJcXhhwUa1ZQTYbxzzJ1hotzKu8hS",
    "version": "0.0.0",
    "accounts": [
      {
        "kind": "accountNode",
        "name": "documentState",
        "docs": [
          "Account state used by the docs fixture."
        ],
        "data": {
          "kind": "structTypeNode",
          "fields": [
            {
              "kind": "structFieldTypeNode",
              "name": "discriminator",
              "defaultValueStrategy": "omitted",
              "type": {
                "kind": "numberTypeNode",
                "format": "u8",
                "endian": "le"
              },
              "defaultValue": {
                "kind": "numberValueNode",
                "number": 1
              }
            },
            {
              "kind": "structFieldTypeNode",
              "name": "authority",
              "docs": [
                "Program authority for this document."
              ],
              "type": {
                "kind": "publicKeyTypeNode"
              }
            },
            {
              "kind": "structFieldTypeNode",
              "name": "revision",
              "docs": [
                "Monotonic revision number."
              ],
              "type": {
                "kind": "numberTypeNode",
                "format": "u64",
                "endian": "le"
              }
            }
          ]
        },
        "discriminators": [
          {
            "kind": "constantDiscriminatorNode",
            "offset": 0,
            "constant": {
              "kind": "constantValueNode",
              "type": {
                "kind": "numberTypeNode",
                "format": "u8",
                "endian": "le"
              },
              "value": {
                "kind": "numberValueNode",
                "number": 1
              }
            }
          }
        ]
      }
    ],
    "instructions": [
      {
        "kind": "instructionNode",
        "name": "create",
        "docs": [
          "Creates a new document account."
        ],
        "accounts": [
          {
            "kind": "instructionAccountNode",
            "name": "payer",
            "isWritable": false,
            "isSigner": true,
            "isOptional": false,
            "docs": [
              "Payer funding the account creation."
            ]
          },
          {
            "kind": "instructionAccountNode",
            "name": "document",
            "isWritable": true,
            "isSigner": false,
            "isOptional": false,
            "docs": [
              "Document account to initialize."
            ]
          }
        ],
        "arguments": [
          {
            "kind": "instructionArgumentNode",
            "name": "discriminator",
            "defaultValueStrategy": "omitted",
            "type": {
              "kind": "numberTypeNode",
              "format": "u8",
              "endian": "le"
            },
            "defaultValue": {
              "kind": "numberValueNode",
              "number": 1
            }
          },
          {
            "kind": "instructionArgumentNode",
            "name": "bump",
            "docs": [
              "PDA bump for document derivation."
            ],
            "type": {
              "kind": "numberTypeNode",
              "format": "u8",
              "endian": "le"
            }
          }
        ],
        "discriminators": [
          {
            "kind": "constantDiscriminatorNode",
            "offset": 0,
            "constant": {
              "kind": "constantValueNode",
              "type": {
                "kind": "numberTypeNode",
                "format": "u8",
                "endian": "le"
              },
              "value": {
                "kind": "numberValueNode",
                "number": 1
              }
            }
          }
        ]
      }
    ],
    "errors": [
      {
        "kind": "errorNode",
        "name": "alreadyExists",
        "code": 9000,
        "message": "The document already exists.",
        "docs": [
          "The document already exists."
        ]
      }
    ]
  }
}
