crates/pina_cli/tests/snapshots/fixtures__minimal.snap
---
source: crates/pina_cli/tests/fixtures.rs
assertion_line: 38
expression: idl
---
{
  "kind": "rootNode",
  "standard": "codama",
  "version": "1.8.0",
  "program": {
    "kind": "programNode",
    "name": "minimal",
    "publicKey": "GJQcuWrT2f3f4KNuJcXhhwUa1ZQTYbxzzJ1hotzKu8hS",
    "version": "0.0.0"
  }
}
