crates/pina_cli/tests/snapshots/fixtures__pda_seeds.snap
---
source: crates/pina_cli/tests/fixtures.rs
assertion_line: 38
expression: idl
---
{
  "kind": "rootNode",
  "standard": "codama",
  "version": "1.8.0",
  "program": {
    "kind": "programNode",
    "name": "pdaSeeds",
    "publicKey": "GJQcuWrT2f3f4KNuJcXhhwUa1ZQTYbxzzJ1hotzKu8hS",
    "version": "0.0.0",
    "instructions": [
      {
        "kind": "instructionNode",
        "name": "initialize",
        "accounts": [
          {
            "kind": "instructionAccountNode",
            "name": "authority",
            "isWritable": false,
            "isSigner": false,
            "isOptional": false
          },
          {
            "kind": "instructionAccountNode",
            "name": "counter",
            "isWritable": true,
            "isSigner": false,
            "isOptional": false,
            "defaultValue": {
              "kind": "pdaValueNode",
              "pda": {
                "kind": "pdaLinkNode",
                "name": "counter"
              },
              "seeds": [
                {
                  "kind": "pdaSeedValueNode",
                  "name": "authority",
                  "value": {
                    "kind": "accountValueNode",
                    "name": "authority"
                  }
                }
              ]
            }
          }
        ],
        "arguments": [
          {
            "kind": "instructionArgumentNode",
            "name": "bump",
            "type": {
              "kind": "numberTypeNode",
              "format": "u8",
              "endian": "le"
            }
          }
        ],
        "discriminators": [
          {
            "kind": "constantDiscriminatorNode",
            "offset": 0,
            "constant": {
              "kind": "constantValueNode",
              "type": {
                "kind": "numberTypeNode",
                "format": "u8",
                "endian": "le"
              },
              "value": {
                "kind": "numberValueNode",
                "number": 1
              }
            }
          }
        ]
      }
    ],
    "pdas": [
      {
        "kind": "pdaNode",
        "name": "counter",
        "seeds": [
          {
            "kind": "constantPdaSeedNode",
            "type": {
              "kind": "stringTypeNode",
              "encoding": "utf8"
            },
            "value": {
              "kind": "stringValueNode",
              "string": "counter"
            }
          },
          {
            "kind": "variablePdaSeedNode",
            "name": "authority",
            "type": {
              "kind": "publicKeyTypeNode"
            }
          }
        ]
      }
    ]
  }
}
