crates/pina_cli/tests/snapshots/fixtures__single_instruction.snap
---
source: crates/pina_cli/tests/fixtures.rs
assertion_line: 38
expression: idl
---
{
  "kind": "rootNode",
  "standard": "codama",
  "version": "1.8.0",
  "program": {
    "kind": "programNode",
    "name": "singleInstruction",
    "publicKey": "GJQcuWrT2f3f4KNuJcXhhwUa1ZQTYbxzzJ1hotzKu8hS",
    "version": "0.0.0",
    "instructions": [
      {
        "kind": "instructionNode",
        "name": "doThing",
        "accounts": [
          {
            "kind": "instructionAccountNode",
            "name": "authority",
            "isWritable": false,
            "isSigner": false,
            "isOptional": false
          },
          {
            "kind": "instructionAccountNode",
            "name": "target",
            "isWritable": false,
            "isSigner": false,
            "isOptional": false
          }
        ],
        "arguments": [
          {
            "kind": "instructionArgumentNode",
            "name": "amount",
            "type": {
              "kind": "numberTypeNode",
              "format": "u64",
              "endian": "le"
            }
          },
          {
            "kind": "instructionArgumentNode",
            "name": "enabled",
            "type": {
              "kind": "booleanTypeNode",
              "size": {
                "kind": "numberTypeNode",
                "format": "u8",
                "endian": "le"
              }
            }
          }
        ],
        "discriminators": [
          {
            "kind": "constantDiscriminatorNode",
            "offset": 0,
            "constant": {
              "kind": "constantValueNode",
              "type": {
                "kind": "numberTypeNode",
                "format": "u8",
                "endian": "le"
              },
              "value": {
                "kind": "numberValueNode",
                "number": 1
              }
            }
          }
        ]
      }
    ]
  }
}
