crates/pina_cli/tests/snapshots/fixtures__validation_signer_writable.snap
---
source: crates/pina_cli/tests/fixtures.rs
expression: idl
---
{
  "kind": "rootNode",
  "standard": "codama",
  "version": "1.8.0",
  "program": {
    "kind": "programNode",
    "name": "validationSignerWritable",
    "publicKey": "GJQcuWrT2f3f4KNuJcXhhwUa1ZQTYbxzzJ1hotzKu8hS",
    "version": "0.0.0",
    "instructions": [
      {
        "kind": "instructionNode",
        "name": "validate",
        "accounts": [
          {
            "kind": "instructionAccountNode",
            "name": "authority",
            "isWritable": false,
            "isSigner": true,
            "isOptional": false
          },
          {
            "kind": "instructionAccountNode",
            "name": "payer",
            "isWritable": true,
            "isSigner": true,
            "isOptional": false
          },
          {
            "kind": "instructionAccountNode",
            "name": "recipient",
            "isWritable": true,
            "isSigner": false,
            "isOptional": false
          }
        ],
        "arguments": [
          {
            "kind": "instructionArgumentNode",
            "name": "discriminator",
            "defaultValueStrategy": "omitted",
            "type": {
              "kind": "numberTypeNode",
              "format": "u8",
              "endian": "le"
            },
            "defaultValue": {
              "kind": "numberValueNode",
              "number": 1
            }
          }
        ],
        "discriminators": [
          {
            "kind": "constantDiscriminatorNode",
            "offset": 0,
            "constant": {
              "kind": "constantValueNode",
              "type": {
                "kind": "numberTypeNode",
                "format": "u8",
                "endian": "le"
              },
              "value": {
                "kind": "numberValueNode",
                "number": 1
              }
            }
          }
        ]
      }
    ]
  }
}
